src/objects/Charge__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Which contractor the charge is for</description>
        <inlineHelpText>Which contractor the charge is for</inlineHelpText>
        <label>Contractor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You may only choose a contact of type Contractor for this field</errorMessage>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Contractor Contact</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Final date included in this charge</description>
        <inlineHelpText>Final date included in this charge</inlineHelpText>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <referenceTo>PO__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>First date included in this charge</description>
        <inlineHelpText>First date included in this charge</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Charge</label>
    <nameField>
        <displayFormat>Charge-{0}</displayFormat>
        <label>Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>